# ai-gmail-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/: gmail-auto-label.md  gmail.md
.github/workflows/: ci.yml
src/: cli.py
src/gmail/: __init__.py  auth.py  client.py  delete.py
src/gmail_cleaner/: __main__.py  client.py  config.py  keep.py
src/llm/: __init__.py  agent.py
static/: index.html
tests/: test_api.py  test_config.py
