[project]
name = "ai-gmail-cleaner"
version = "0.1.0"
description = "Bulk delete old Gmail emails and preserve recent ones"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
gmail-cleaner = "gmail_cleaner.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_cleaner"]
