[project]
name = "ai-gmail-cleaner"
version = "0.2.0"
description = "AI-powered Gmail management with LangChain + FastAPI"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-aws>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
gmail-cleaner = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
